Pas fini mais tt début de la logique modèle view controller avec interface et classe pour reduire le code pénible